trunk/Archive/9c81b023128d3bcaf052edfc7f03a39a-9ac5ce49fb3bb81c20db0c664e0c63a1/output
+ g++ -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘bool tryEvaluator(T&, int)’:
main.cpp:18:34: error: expected primary-expression before ‘>’ token
         return evaluator.isGood<B>(value);
                                  ^
main.cpp: In function ‘bool tryEvaluator(T&, int) [with T = const A]’:
main.cpp:19:9: warning: control reaches end of non-void function [-Wreturn-type]
         }
         ^
